[gd_scene load_steps=16 format=3 uid="uid://bvlerh2hfayrm"]

[ext_resource type="Script" uid="uid://cjrtt4vyburuq" path="res://prototyping/music_manager.gd" id="1_sugp2"]
[ext_resource type="Script" uid="uid://cweqg3v7yv2sh" path="res://scripts/enemy_manager.gd" id="1_tbgi4"]
[ext_resource type="AudioStream" uid="uid://y1regmghqvhg" path="res://audio/ravekeeper_level1.ogg" id="2_jyhfs"]
[ext_resource type="PackedScene" uid="uid://cvpwbb3vlsd0p" path="res://scenes/enemy.tscn" id="2_tefeu"]
[ext_resource type="AudioStream" uid="uid://blqy2s23oueyo" path="res://audio/tick.mp3" id="2_tipki"]
[ext_resource type="AudioStream" uid="uid://dss0sj76b43hv" path="res://audio/ravekeeper_level1_sting.ogg" id="3_tbgi4"]
[ext_resource type="PackedScene" uid="uid://chplmoaodo7pw" path="res://scenes/human.tscn" id="7_85g3d"]
[ext_resource type="Script" uid="uid://c8kdxjgevcjb" path="res://scripts/track_loader.gd" id="7_o6xl0"]
[ext_resource type="PackedScene" uid="uid://df5o1158j5pe6" path="res://scenes/gargoyle_map.tscn" id="8_tipki"]
[ext_resource type="PackedScene" uid="uid://dmpfoykm450ag" path="res://models/church.fbx" id="10_choun"]
[ext_resource type="PackedScene" uid="uid://b7pneynwr7dfn" path="res://models/cameraParent.fbx" id="10_ya4ey"]

[sub_resource type="BoxMesh" id="BoxMesh_jyhfs"]

[sub_resource type="BoxMesh" id="BoxMesh_o6xl0"]

[sub_resource type="BoxMesh" id="BoxMesh_tbgi4"]

[sub_resource type="BoxMesh" id="BoxMesh_tefeu"]

[node name="Main" type="Node3D"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.772093, -0.0902697, 0.629065, -0.255389, 0.862341, 0.4372, -0.581935, -0.498216, 0.642754, -2.93093, 0, 5.27995)

[node name="MusicManager" type="Node" parent="."]
script = ExtResource("1_sugp2")
move_step = 2

[node name="PrerollTick" type="AudioStreamPlayer" parent="MusicManager"]
stream = ExtResource("2_tipki")

[node name="Backing" type="AudioStreamPlayer" parent="MusicManager"]
stream = ExtResource("2_jyhfs")

[node name="Stings" type="AudioStreamPlayer" parent="MusicManager"]
stream = ExtResource("3_tbgi4")

[node name="Lanes" type="Node3D" parent="."]

[node name="Lane1" type="Node3D" parent="Lanes"]

[node name="FinishLane" type="MeshInstance3D" parent="Lanes/Lane1"]
transform = Transform3D(0.399145, 0, -0.0261473, 0, 0.4, 0, 0.0261473, 0, 0.399145, -3.294, 0, 2.621)
mesh = SubResource("BoxMesh_jyhfs")
skeleton = NodePath("../..")

[node name="StartLane" type="MeshInstance3D" parent="Lanes/Lane1"]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -2.594, 0, 7.067)
mesh = SubResource("BoxMesh_o6xl0")
skeleton = NodePath("")

[node name="Enemies" type="Node3D" parent="Lanes/Lane1"]

[node name="Lane2" type="Node3D" parent="Lanes"]

[node name="FinishLane" type="MeshInstance3D" parent="Lanes/Lane2"]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -2.307, 0, 2.663)
mesh = SubResource("BoxMesh_tbgi4")
skeleton = NodePath("../..")

[node name="StartLane" type="MeshInstance3D" parent="Lanes/Lane2"]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -1.484, 0, 7.067)
mesh = SubResource("BoxMesh_o6xl0")
skeleton = NodePath("")

[node name="Enemies" type="Node3D" parent="Lanes/Lane2"]

[node name="Lane3" type="Node3D" parent="Lanes"]

[node name="FinishLane" type="MeshInstance3D" parent="Lanes/Lane3"]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -1.242, 0, 2.756)
mesh = SubResource("BoxMesh_tefeu")
skeleton = NodePath("../..")

[node name="StartLane" type="MeshInstance3D" parent="Lanes/Lane3"]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -0.349336, 0, 7.067)
mesh = SubResource("BoxMesh_o6xl0")
skeleton = NodePath("")

[node name="Enemies" type="Node3D" parent="Lanes/Lane3"]

[node name="EnemyManager" type="Node3D" parent="."]
script = ExtResource("1_tbgi4")
enemy_scene = ExtResource("2_tefeu")
human_scene = ExtResource("7_85g3d")

[node name="Player" type="Node3D" parent="."]

[node name="MusicEventParser" type="Node" parent="."]
script = ExtResource("7_o6xl0")

[node name="gargoyleMAP" parent="." instance=ExtResource("8_tipki")]

[node name="cameraParent" parent="." instance=ExtResource("10_ya4ey")]

[node name="church" parent="." instance=ExtResource("10_choun")]
